# heat-diffusion-lab

./: .gitattributes  README.md  mkdocs.yml
backend_node/: package.json  server.js
docs/: architecture.md  backend.md  development.md  docs_site.md  engine_cpp.md  frontend.md  index.md  mathematical_model.md
engine_cpp/: CMakeLists.txt
engine_cpp/src/: diffusion_system.cpp  diffusion_system.hpp  main.cpp  simulation_engine.cpp  simulation_engine.hpp
frontend_web/: index.html  package.json
frontend_web/src/: App.tsx  index.css  types.ts
frontend_web/src/components/: ControlsPanel.tsx
frontend_web/src/lib/: heatLabMath.ts
